components/Web4TSComponent/0.3.11.1/spec/chapters/04-compliance-and-standards.md
# Chapter 4: Compliance & Standards

**Document:** Web4TSComponent Technical Specification  
**Chapter:** Web4 Compliance & CMM4 Standards  
**Focus:** Requirements and compliance verification

[← Back to Index](../component.spec.md)

---

## 🛡️ Web4 Compliance Principles

Web4TSComponent enforces these architectural principles:

### 1. Empty Constructor Principle

```typescript
// ✅ CORRECT
constructor() {
  this.model = { /* defaults */ };
}

// ❌ WRONG
constructor(config: Config) { }
```

### 2. Scenario Support

```typescript
// ✅ REQUIRED for all components
init(scenario: Scenario<Model>): this
async toScenario(): Promise<Scenario<Model>>
```

### 3. Human-Readable Errors

```typescript
// ✅ CORRECT
throw new Error('I couldn\'t find the component. Please check the name and version.');

// ❌ WRONG
throw new Error('ENOENT: no such file or directory');
```

### 4. Method Chaining

```typescript
// ✅ CORRECT - Return this for chaining
async myMethod(): Promise<this> {
  return this;
}
```

### 5. DRY Principle

```typescript
// ✅ CORRECT - Symlinked dependencies
ln -sf ../../../node_modules node_modules

// ❌ WRONG - Real directories duplicate dependencies
npm install  # without proper symlink setup
```

---

## 🚀 Quick Reference

### The Only Command You Really Need:

```bash
npm start  # Handles everything automatically
```

### Other Useful Commands (But npm start handles them):

```bash
# These happen automatically, but you can run them manually:
npm test       # Test the component
npm run build  # Build manually
npm run clean  # Clean and rebuild

# Direct CLI usage (after build):
./web4tscomponent                              # Show help
./web4tscomponent create MyComponent 0.1.0.0 all  # Create component
./web4tscomponent on MyComponent 0.1.0.0 test  # Load context and test
./web4tscomponent on MyComponent 0.1.0.0 upgrade nextBuild test  # Chain operations
```

### Semantic Version Links:

- **dev** - Active development version (work here)
- **test** - Version ready for testing (test here)
- **prod** - Production-ready version (100% tested)
- **latest** - Latest stable release (same as prod)

---

## 🎯 Why This Works (The Web4 Magic)

### Auto-Discovery Architecture:

1. **CLI scans DefaultWeb4TSComponent** using TypeScript reflection
2. **Finds all public methods** automatically
3. **Reads TSDoc comments** for parameter information
4. **Generates help text** from your comments
5. **Routes commands** to your methods automatically

### Zero Configuration:

- No CLI configuration files
- No method registration arrays
- No hardcoded command lists
- **Just add method + TSDoc = CLI command!**

### DRY Principle:

- Write method once → available everywhere
- TSDoc comments → automatic documentation
- Method signature → automatic parameter handling
- Symlinked dependencies → no duplication
- **No repetitive code anywhere!**

### Automatic Lifecycle:

- `npm start` → builds automatically
- Dependencies → install automatically
- Symlinks → create automatically
- CLI → starts automatically
- Components created → work the same way

---

## 9. CMM4 Implementation Specification

Web4TSComponent implements **CMM4 (Capability Maturity Model Level 4)**:

### CMM3 Foundation:
- ✅ **Objective Definitions** - Tests provide reproducible verification
- ✅ **Automated Execution** - No manual steps required
- ✅ **Scientific Reproducibility** - Same input → same output always

### CMM4 Achievement:
- ✅ **Feedback Loop Mastery** - PDCA cycle with automatic promotion
- ✅ **Whitebox Understanding** - Tests document system behavior
- ✅ **Systematic Improvement** - Each cycle refines the process
- ✅ **Quantitative Management** - Test metrics drive decisions

### Not CMM5:
- ❌ **Not 100% perfection** - Targets 80/20 efficiency (SpaceX model)
- ✅ **Economic viability** - Balances quality with practicality
- ✅ **Continuous improvement** - Better over time, not perfect immediately

---

## 📊 Version History & Migration Path

### Version Progression:

- **0.3.0.x** - Initial auto-discovery CLI implementation
- **0.3.1.x** - Enhanced version management
- **0.3.2.x** - Test isolation and promotion workflow
- **0.3.3.0** - Comprehensive test suites
- **0.3.3.1** - Bug fixes and stability
- **0.3.3.2** - **DRY compliance enforcement + Automatic lifecycle (current)**

### Migration from Earlier Versions:

If migrating from earlier versions:

1. Check for real node_modules directories
2. Run DRY compliance tests to identify violations
3. Remove real directories and create symlinks
4. Verify with: `npm test`
5. Use `npm start` for everything

---

## 🔗 Related Documentation

- **CMM Understanding:** `/scrum.pmo/project.journal/2025-09-22-UTC-1908-session/howto.cmm.md`
- **PDCA Process:** `/scrum.pmo/roles/_shared/PDCA/howto.PDCA.md`
- **Tech Stack:** `/docs/tech-stack.md`
- **Unit Component:** Similar auto-discovery CLI pattern

---

